Changes in version 4.6.5 (2024-02-15)

New features or changed behaviour of old functions
    o   sim.popn() saves 'parents' and 'Lambda' attributes from rThomas
    o   relative density option 'relativeD'
    o   AICcompatible() checks for 'relativeD'

Bugs fixed
    o   score.test() failed with condition length>1
    o   makeStart() failed with details$fixedbeta
    o   obscure reparameterizations param = 2,6 failed
    o   fxi.secr() did not allow polygon data
    o   static userdist not working

Other
    o   secr.fit() warns if factor levels inconsistent for covariates of 
        multi-session mask
    o   undocumented feature: details = list(externalpdot = 'pd') where 'pd'
        is the name of a mask covariate to substitute for internally computed 
        p.(x|theta)

Changes in version 4.6.4 (2023-10-18)

New features or changed behaviour of old functions
    o   none

Other
    o   tweak kfn.Rd to reduce CRAN check time

Changes in version 4.6.3 (2023-10-17)

New features or changed behaviour of old functions
    o   sim.popn() simulates log-gaussian Cox process (model2D = "rLGCP") using 
        packages spatstat and RandomFields
    o   sim.popn() simulates Thomas process (model2D = "rThomas") using spatstat
    o   as.popn() converts spatstat ppp objects
    o   randomDensity() new wrapper for randomHabitat() for use with sim.popn()
    o   reduce.capthist() now retains popn attribute
    o   trend reparameterization of density (secr.fit details 'Dlambda')
    o   kfn() new function for overlap index

Bugs fixed
    o   make.capthist() could lose individual covariates of animals later 
        lost on capture (negative occasion number)

Other
    o   suggests spatstat, spatstat.geom, spatstat.random (LGCP), 
        and igraph (randomHabitat)
    o   randomHabitat() loads igraph automatically if needed
    o   imports raster::flip
    o   Fletcher.chat() returns NA instead of error when input NA